--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,17 @@ endif()
 cmake_minimum_required(VERSION 2.8)
 project( ejemplotiempo	 )
 find_package( OpenCV REQUIRED )
+
 include_directories( ${OpenCV_INCLUDE_DIRS} )
-add_executable( ejemplotiempo ejemplotiempo.cpp )
-target_link_libraries( ejemplotiempo ${OpenCV_LIBS} )
+
+#add_executable( ejemplotiempo ejemplotiempo.cpp )
+#target_link_libraries( ejemplotiempo ${OpenCV_LIBS} )
+#
+#
+#add_executable( raton raton.cpp )
+#target_link_libraries( raton ${OpenCV_LIBS} )
+
+
+add_executable( ratonekf ratonekf.cpp )
+target_link_libraries( ratonekf ${OpenCV_LIBS} )
 
